putting backgound image and fixing some css bugs

--- a/admin-pages/login.html
+++ b/admin-pages/login.html
@@ -11,7 +11,12 @@
 <body>
     <header>
         <div class="container nav-container">
-            <div class="logo"><a href="index.html">ASF<span>Tracker</span></a></div>
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/SwineCareIcon.png" alt="Pig Icon" class="logo-icon">
+                    ASF<span>Tracker</span>
+                </a>
+            </div>
         </div>
     </header>
     
