--- a/admin-pages/map.html
+++ b/admin-pages/map.html
@@ -12,7 +12,12 @@
 <body>
     <header>
         <div class="container nav-container">
-            <div class="logo"><a href="../index.html">ASF<span>Tracker</span></a></div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../images/SwineCareIcon.png" alt="Pig Icon" class="logo-icon">
+                    ASF<span>Tracker</span>
+                </a>
+            </div>
             <div class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="#">Reports</a>
@@ -74,11 +79,6 @@
         </div>
     </div>
     
-    <footer>
-        <div class="container">
-            <p>© 2025 Provincial Veterinary Office of Davao del Norte. All Rights Reserved.</p>
-        </div>
-    </footer>
     
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="views/map.js"></script>
