--- a/admin-pages/overview.html
+++ b/admin-pages/overview.html
@@ -11,7 +11,12 @@
 <body>
     <header>
         <div class="container nav-container">
-            <div class="logo"><a href="../index.html">ASF<span>Tracker</span></a></div>
+            <div class="logo">
+                <a href="../index.html">
+                    <img src="../images/SwineCareIcon.png" alt="Pig Icon" class="logo-icon">
+                    ASF<span>Tracker</span>
+                </a>
+            </div>
             <div class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="#">Reports</a>
@@ -83,12 +88,6 @@
             </div>
         </div>
     </div>
-    
-    <footer>
-        <div class="container">
-            <p>© 2025 Provincial Veterinary Office of Davao del Norte. All Rights Reserved.</p>
-        </div>
-    </footer>
     
     <script src="views/overview.js"></script>
 </body>
