fixing logo and background image

--- a/admin-pages/map.html
+++ b/admin-pages/map.html
@@ -14,7 +14,7 @@
         <div class="container nav-container">
             <div class="logo">
                 <a>
-                    <img src="images/SwineCareIcon.png" alt="Pig Icon" class="logo-icon">
+                    <img src="images/SwineCareFinal.png" alt="Pig Icon" class="logo-icon">
                     ASF<span>Tracker</span>
                 </a>
             </div>
